--- a/dev/index.html
+++ b/dev/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@usrc/bootstrap</title>
+    <title>@usrc/mist</title>
     <style>
       * {
         margin: 0;
